--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/mulesoft/node-raml-sanitize",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^6.1.4",
-    "standard": "^12.0.0",
-    "nyc": "^14.1.0"
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
+    "standard": "^14.3.1"
   },
   "dependencies": {}
 }
